# winsynth

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: BUILD.md
include/: App.h  AudioManager.h  D3DManager.h  GUIManager.h  noiseMaker.h
notes/: architecture.md  framework_refactoring.md  usage.md
scripts/: build.bat  format.sh
src/: App.cpp  AudioManager.cpp  D3DManager.cpp  GUIManager.cpp  main.cpp
